# python-template

./: README.md  pyproject.toml
my_package/: my_package.py
